# shapecheck

./: .gitignore  .pre-commit-config.yaml  .style.yapf  CONTRIBUTING.md  DESIGN.md  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: format-code.yml  python-package.yml
shapecheck/: __init__.py  _main.py  exception.py  shapecheck.py  utils.py
tests/: test_shapecheck.py  test_utils.py  utils.py
