[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[yapf]
based_on_style = google
column_limit = 88
blank_line_before_nested_class_or_def = False
split_before_logical_operator = True
# arithmetic_precedence_indication = True
# no_spaces_around_selected_binary_operators = True
coalesce_brackets = True

[flake8]
max-line-length = 88
max-complexity = 13

[isort]
line_length = 88
